crates/native/src/pipeline/snapshots/mearie_native__pipeline__tests__fragment_basic_module.snap
---
source: crates/native/src/pipeline/mod.rs
expression: "& module.code"
---
type GetUser = import("./types.d.ts").GetUser;
type UserInfo = import("./types.d.ts").UserInfo;
declare module "$mearie" {
	export type RequiredAction = import("./types.d.ts").RequiredAction;
	export type GetUser = import("./types.d.ts").GetUser;
	export type UserInfo = import("./types.d.ts").UserInfo;
	export type UserInfo$key = import("./types.d.ts").UserInfo$key;
	export function graphql(artifact: "\n            query GetUser {\n                user {\n                    id\n                    ...UserInfo\n                }\n            }\n        "): GetUser;
	export function graphql(artifact: "\n            fragment UserInfo on User {\n                name\n                email\n            }\n        "): UserInfo;
	export declare const schema: import("./types.d.ts").$Schema;
}
