crates/native/src/pipeline/snapshots/mearie_native__pipeline__tests__fragment_basic_types.snap
---
source: crates/native/src/pipeline/mod.rs
expression: "& types.code"
---
import type { Artifact as $Artifact, Nullable as $Nullable, List as $List, FragmentRefs as $FragmentRefs, SchemaMeta as $SchemaMeta } from "mearie/types";
export type $Scalars = {
	ID: string;
	String: string;
	Int: number;
	Float: number;
	Boolean: boolean;
};
export type $Schema = $SchemaMeta<{
	scalars: {};
	entities: {
		User: {
			keyFields: {
				id: $Scalars["ID"];
			};
			fields: "email" | "name" | "id";
		};
	};
	queryFields: "user";
}>;
export type RequiredAction = "THROW" | "CASCADE";
export type UserInfo$data = {
	email?: $Nullable<$Scalars["String"]>;
	name: $Scalars["String"];
};
export type UserInfo$key = $FragmentRefs<"UserInfo">;
export type UserInfo = $Artifact<"fragment", "UserInfo", UserInfo$data, never>;
export type GetUser$data = {
	user?: $Nullable<{
		id: $Scalars["ID"];
	} & $FragmentRefs<"UserInfo">>;
};
export type GetUser$vars = {};
export type GetUser = $Artifact<"query", "GetUser", GetUser$data, GetUser$vars>;
